# AI-invoice-automation

./: .env.example  .gitignore  README.md  STREAMLIT_README.md  commands.sh  init_db.py  pyproject.toml  requirements.txt  run_app.sh  setup_postgres.sh  start.sh  stop_app.sh  streamlit_app.py
.streamlit/: config.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: analytics.py  auth.py  classification.py  documents.py  gmail.py  gmail_imap.py  invoices.py  search.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: invoice.py  user.py
app/schemas/: invoice_schema.py  response_schema.py
app/services/: classification_service.py  document_parser.py  embedding_service.py  gmail_imap_service.py  gmail_service.py  pinecone_service.py
docker/: Dockerfile  docker-compose.yml
scripts/: cron_gmail_sync.py  seed_data.py
