[tool.poetry]
name = "ai-invoice-automation"
version = "1.0.0"
description = "AI-powered invoice and attachment automation system with FastAPI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
google-api-python-client = "^2.116.0"
google-auth-oauthlib = "^1.2.0"
PyPDF2 = "^3.0.1"
python-docx = "^1.1.0"
pandas = "^2.1.4"
openai = "^1.10.0"
langchain = "^0.1.5"
langchain-openai = "^0.0.5"
sentence-transformers = "^2.3.1"
pinecone-client = "^3.0.2"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
